--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "@babel/preset-typescript": "7.16.7",
     "@babel/runtime": "7.17.9",
     "@types/react": "17.0.0",
+    "@types/react-router-dom": "5.3.1",
     "@types/webpack": "5.28.0",
     "css-loader": "6.7.1",
     "html-webpack-plugin": "5.5.0",
     "node-sass": "7.0.1",
     "react": "17.0.0",
     "react-dom": "17.0.0",
+    "react-router-dom": "5.3.1",
     "redux": "4.1.2",
     "sass": "1.50.0",
     "sass-loader": "12.6.0",
