--- a/package.json
+++ b/package.json
@@ -24,15 +24,15 @@
     "@babel/plugin-transform-runtime": "7.17.0",
     "@babel/preset-typescript": "7.16.7",
     "@babel/runtime": "7.17.9",
-    "@chakra-ui/react": "^1.8.8",
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
+    "@chakra-ui/react": "1.8.8",
+    "@emotion/react": "11.9.0",
+    "@emotion/styled": "11.8.1",
     "@types/react": "17.0.0",
     "@types/react-router-dom": "5.3.1",
     "@types/webpack": "5.28.0",
     "css-loader": "6.7.1",
-    "formik": "^2.2.9",
-    "framer-motion": "^6.3.0",
+    "formik": "2.2.9",
+    "framer-motion": "6.3.0",
     "html-webpack-plugin": "5.5.0",
     "node-sass": "7.0.1",
     "react": "17.0.0",
