--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-dom": "17.0.0",
     "react-icons": "^4.3.1",
     "react-router-dom": "5.3.1",
+    "react-toastify": "^8.2.0",
     "redux": "4.1.2",
     "sass": "1.50.0",
     "sass-loader": "12.6.0",
