#34  - корректировки настроек линтера  - исправление ворнингов линтера  - исправление ошибок типизации

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,13 +9,38 @@
     "react-hooks"
   ],
   "extends": [
+    "eslint:recommended",
     "plugin:react/recommended",
-    "plugin:@typescript-eslint/recommended"
+    "plugin:@typescript-eslint/recommended",
+    "plugin:@typescript-eslint/eslint-recommended"
   ],
   "rules": {
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
-    "react/prop-types": "off"
+    "react/prop-types": "off",
+    "indent-legacy": [
+      2,
+      2
+    ],
+    "quotes": [
+      1,
+      "single",
+      {"avoidEscape": true, "allowTemplateLiterals": true}
+    ],
+    "quote-props": [2, "as-needed"],
+    "brace-style": [2, "1tbs", { "allowSingleLine": true }],
+    "comma-spacing": [1, {"before": false, "after": true}],
+    "no-duplicate-imports": [2, {"includeExports": true}],
+    "no-nested-ternary": 1,
+    "object-curly-spacing": [1, "always"],
+    "semi": [1, "always"],
+    "comma-dangle": ["error", {
+      "arrays": "always-multiline",
+      "objects": "always-multiline",
+      "imports": "always-multiline",
+      "exports": "always-multiline",
+      "functions": "always-multiline"
+    }]
   },
   "settings": {
     "react": {
