--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@chakra-ui/react": "1.8.8",
     "@emotion/react": "11.9.0",
     "@emotion/styled": "11.8.1",
-    "@types/lodash": "^4.14.182",
+    "@types/lodash": "4.14.182",
     "@types/react": "17.0.0",
     "@types/react-router-dom": "5.3.1",
     "@types/webpack": "5.28.0",
@@ -36,14 +36,14 @@
     "formik": "2.2.9",
     "framer-motion": "6.3.0",
     "html-webpack-plugin": "5.5.0",
-    "lodash": "^4.17.21",
+    "lodash": "4.17.21",
     "node-sass": "7.0.1",
     "rc-upload": "4.3.3",
     "react": "17.0.0",
     "react-dom": "17.0.0",
     "react-icons": "4.3.1",
     "react-router-dom": "5.3.1",
-    "react-toastify": "^8.2.0",
+    "react-toastify": "8.2.0",
     "redux": "4.1.2",
     "sass": "1.50.0",
     "sass-loader": "12.6.0",
@@ -59,7 +59,7 @@
     "eslint": "8.13.0",
     "eslint-plugin-react": "7.29.4",
     "eslint-plugin-react-hooks": "4.4.0",
-    "file-loader": "^6.2.0",
+    "file-loader": "6.2.0",
     "postcss": "8.4.12",
     "postcss-loader": "6.2.1",
     "postcss-preset-env": "7.4.3",
