--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/react-router-dom": "5.3.1",
     "@types/webpack": "5.28.0",
     "css-loader": "6.7.1",
+    "date-fns": "^2.28.0",
     "formik": "2.2.9",
     "framer-motion": "6.3.0",
     "html-webpack-plugin": "5.5.0",
