--- a/package.json
+++ b/package.json
@@ -21,24 +21,12 @@
   },
   "homepage": "https://github.com/threedots-yandex-praktikum/three-dots-game#readme",
   "dependencies": {
-    "@babel/plugin-transform-runtime": "7.17.0",
-    "@babel/preset-typescript": "7.16.7",
-    "@babel/runtime": "7.17.9",
     "@chakra-ui/icons": "1.1.7",
     "@chakra-ui/react": "1.8.8",
-    "@emotion/react": "11.9.0",
-    "@emotion/styled": "11.8.1",
-    "@types/lodash": "4.14.182",
-    "@types/react": "17.0.0",
-    "@types/react-router-dom": "5.3.1",
-    "@types/webpack": "5.28.0",
-    "css-loader": "6.7.1",
     "date-fns": "^2.28.0",
     "formik": "2.2.9",
     "framer-motion": "6.3.0",
-    "html-webpack-plugin": "5.5.0",
     "lodash": "4.17.21",
-    "node-sass": "7.0.1",
     "rc-upload": "4.3.3",
     "react": "17.0.0",
     "react-dom": "17.0.0",
@@ -46,30 +34,53 @@
     "react-router-dom": "5.3.1",
     "react-toastify": "8.2.0",
     "redux": "4.1.2",
-    "sass": "1.50.0",
-    "sass-loader": "12.6.0",
-    "style-loader": "3.3.1",
-    "webpack": "5.72.0",
-    "webpack-cli": "4.9.2"
+    "workbox-cacheable-response": "^6.5.3",
+    "workbox-expiration": "^6.5.3"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.16.7",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.17.10",
+    "@babel/preset-env": "^7.17.10",
+    "@babel/preset-react": "^7.16.7",
+    "@babel/preset-typescript": "7.16.7",
+    "@babel/runtime": "7.17.9",
+    "@emotion/react": "11.9.0",
+    "@emotion/styled": "11.8.1",
+    "@types/lodash": "4.14.182",
+    "@types/react": "17.0.0",
     "@types/react-dom": "17.0.0",
+    "@types/react-router-dom": "5.3.1",
+    "@types/webpack": "5.28.0",
     "@typescript-eslint/eslint-plugin": "5.20.0",
     "@typescript-eslint/parser": "5.20.0",
+    "add-asset-html-webpack-plugin": "^5.0.2",
     "autoprefixer": "10.4.4",
+    "babel-loader": "^8.2.5",
+    "css-loader": "6.7.1",
     "eslint": "8.13.0",
     "eslint-plugin-react": "7.29.4",
     "eslint-plugin-react-hooks": "4.4.0",
     "file-loader": "6.2.0",
+    "html-webpack-plugin": "5.5.0",
+    "node-sass": "7.0.1",
     "postcss": "8.4.12",
     "postcss-loader": "6.2.1",
     "postcss-preset-env": "7.4.3",
     "rimraf": "3.0.2",
+    "sass": "1.50.0",
+    "sass-loader": "12.6.0",
+    "style-loader": "3.3.1",
     "stylelint": "14.7.1",
     "stylelint-config-prettier-scss": "0.0.1",
     "stylelint-config-standard-scss": "3.0.0",
     "ts-loader": "9.2.8",
     "typescript": "4.6.3",
-    "webpack-dev-server": "4.8.1"
+    "webpack": "5.72.0",
+    "webpack-cli": "4.9.2",
+    "webpack-dev-server": "4.8.1",
+    "workbox-routing": "^6.5.3",
+    "workbox-strategies": "^6.5.3",
+    "workbox-webpack-plugin": "^6.5.3"
   }
 }
