--- a/package.json
+++ b/package.json
@@ -34,15 +34,17 @@
     "react-router-dom": "5.3.1",
     "react-toastify": "8.2.0",
     "redux": "4.1.2",
-    "workbox-cacheable-response": "^6.5.3",
-    "workbox-expiration": "^6.5.3"
+    "workbox-routing": "6.5.3",
+    "workbox-strategies": "6.5.3",
+    "workbox-cacheable-response": "6.5.3",
+    "workbox-expiration": "6.5.3"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.16.7",
-    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/plugin-transform-runtime": "^7.17.10",
-    "@babel/preset-env": "^7.17.10",
-    "@babel/preset-react": "^7.16.7",
+    "@babel/plugin-proposal-class-properties": "7.16.7",
+    "@babel/plugin-syntax-dynamic-import": "7.8.3",
+    "@babel/plugin-transform-runtime": "7.17.10",
+    "@babel/preset-env": "7.17.10",
+    "@babel/preset-react": "7.16.7",
     "@babel/preset-typescript": "7.16.7",
     "@babel/runtime": "7.17.9",
     "@emotion/react": "11.9.0",
@@ -79,8 +81,6 @@
     "webpack": "5.72.0",
     "webpack-cli": "4.9.2",
     "webpack-dev-server": "4.8.1",
-    "workbox-routing": "^6.5.3",
-    "workbox-strategies": "^6.5.3",
-    "workbox-webpack-plugin": "^6.5.3"
+    "workbox-webpack-plugin": "6.5.3"
   }
 }
