--- a/package.json
+++ b/package.json
@@ -30,10 +30,11 @@
     "@emotion/styled": "11.8.1",
     "@types/lodash": "4.14.182",
     "@types/react": "17.0.0",
+    "@types/react-redux": "7.1.24",
     "@types/react-router-dom": "5.3.1",
     "@types/webpack": "5.28.0",
     "css-loader": "6.7.1",
-    "date-fns": "^2.28.0",
+    "date-fns": "2.28.0",
     "formik": "2.2.9",
     "framer-motion": "6.3.0",
     "html-webpack-plugin": "5.5.0",
@@ -43,9 +44,12 @@
     "react": "17.0.0",
     "react-dom": "17.0.0",
     "react-icons": "4.3.1",
+    "react-redux": "8.0.1",
     "react-router-dom": "5.3.1",
     "react-toastify": "8.2.0",
     "redux": "4.1.2",
+    "redux-saga": "1.1.3",
+    "reselect": "4.1.5",
     "sass": "1.50.0",
     "sass-loader": "12.6.0",
     "style-loader": "3.3.1",
@@ -54,6 +58,7 @@
   },
   "devDependencies": {
     "@types/react-dom": "17.0.0",
+    "@types/redux": "^3.6.0",
     "@typescript-eslint/eslint-plugin": "5.20.0",
     "@typescript-eslint/parser": "5.20.0",
     "autoprefixer": "10.4.4",
