--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "webpack --mode production",
     "clean": "rimraf dist/*",
     "stylelint": "npx stylelint \"**/*.scss\" --fix",
-    "lint": "eslint --fix ./src"
+    "lint": "eslint --fix ./src",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -28,6 +29,7 @@
     "@chakra-ui/react": "1.8.8",
     "@emotion/react": "11.9.0",
     "@emotion/styled": "11.8.1",
+    "@testing-library/jest-dom": "^5.16.4",
     "@types/lodash": "4.14.182",
     "@types/react": "17.0.0",
     "@types/react-router-dom": "5.3.1",
@@ -53,6 +55,8 @@
     "webpack-cli": "4.9.2"
   },
   "devDependencies": {
+    "@testing-library/react": "12.1.5",
+    "@types/jest": "^27.5.1",
     "@types/react-dom": "17.0.0",
     "@typescript-eslint/eslint-plugin": "5.20.0",
     "@typescript-eslint/parser": "5.20.0",
@@ -61,6 +65,9 @@
     "eslint-plugin-react": "7.29.4",
     "eslint-plugin-react-hooks": "4.4.0",
     "file-loader": "6.2.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^28.1.0",
+    "jest-environment-jsdom": "^28.1.0",
     "postcss": "8.4.12",
     "postcss-loader": "6.2.1",
     "postcss-preset-env": "7.4.3",
@@ -68,6 +75,7 @@
     "stylelint": "14.7.1",
     "stylelint-config-prettier-scss": "0.0.1",
     "stylelint-config-standard-scss": "3.0.0",
+    "ts-jest": "^28.0.2",
     "ts-loader": "9.2.8",
     "typescript": "4.6.3",
     "webpack-dev-server": "4.8.1"
