--- a/package.json
+++ b/package.json
@@ -3,8 +3,13 @@
   "version": "1.0.0",
   "description": "проект игры для второго модуля",
   "main": "index.js",
+  "engines": {
+    "node": "16.14.0"
+  },
   "scripts": {
-    "start": "webpack serve --mode development",
+    "start:webpack": "webpack --watch  --mode development",
+    "start:server": "nodemon index.js --watch dist/server.js",
+    "start": "SET NODE_ENV=development & npm-run-all --print-label --parallel start:*",
     "build": "webpack --mode production",
     "clean": "rimraf dist/*",
     "stylelint": "npx stylelint \"**/*.scss\" --fix",
@@ -23,9 +28,17 @@
   "dependencies": {
     "@chakra-ui/icons": "1.1.7",
     "@chakra-ui/react": "1.8.8",
-    "date-fns": "^2.28.0",
+    "@loadable/component": "^5.15.2",
+    "@loadable/server": "^5.15.2",
+    "@types/history": "^4.7.11",
+    "babel-polyfill": "^6.26.0",
+    "compression": "1.7.4",
+    "connected-react-router": "6.9.2",
+    "date-fns": "2.28.0",
+    "express": "4.18.1",
     "formik": "2.2.9",
     "framer-motion": "6.3.0",
+    "history": "4.9.0",
     "lodash": "4.17.21",
     "rc-upload": "4.3.3",
     "react": "17.0.0",
@@ -47,38 +60,55 @@
     "@babel/runtime": "7.17.9",
     "@emotion/react": "11.9.0",
     "@emotion/styled": "11.8.1",
+    "@loadable/babel-plugin": "^5.13.2",
+    "@loadable/webpack-plugin": "^5.15.2",
+    "@types/compression": "^1.7.2",
+    "@types/express": "4.17.13",
+    "@types/loadable__component": "^5.13.4",
+    "@types/loadable__server": "^5.12.6",
+    "@types/loadable__webpack-plugin": "^5.7.3",
     "@types/lodash": "4.14.182",
+    "@types/mini-css-extract-plugin": "2.5.1",
+    "@types/postcss-import": "14.0.0",
     "@types/react": "17.0.0",
     "@types/react-dom": "17.0.0",
     "@types/react-router-dom": "5.3.1",
     "@types/webpack": "5.28.0",
+    "@types/webpack-node-externals": "2.5.3",
     "@typescript-eslint/eslint-plugin": "5.20.0",
     "@typescript-eslint/parser": "5.20.0",
-    "add-asset-html-webpack-plugin": "^5.0.2",
+    "add-asset-html-webpack-plugin": "5.0.2",
     "autoprefixer": "10.4.4",
-    "babel-loader": "^8.2.5",
+    "babel-loader": "8.2.5",
+    "css-hot-loader": "1.4.4",
     "css-loader": "6.7.1",
     "eslint": "8.13.0",
     "eslint-plugin-react": "7.29.4",
     "eslint-plugin-react-hooks": "4.4.0",
     "file-loader": "6.2.0",
-    "html-webpack-plugin": "5.5.0",
+    "mini-css-extract-plugin": "2.6.0",
     "node-sass": "7.0.1",
+    "nodemon": "2.0.16",
+    "npm-run-all": "4.1.5",
+    "null-loader": "4.0.1",
     "postcss": "8.4.12",
+    "postcss-import": "14.1.0",
+    "postcss-import-alias-resolver": "0.1.1",
     "postcss-loader": "6.2.1",
     "postcss-preset-env": "7.4.3",
     "rimraf": "3.0.2",
     "sass": "1.50.0",
     "sass-loader": "12.6.0",
-    "style-loader": "3.3.1",
     "stylelint": "14.7.1",
     "stylelint-config-prettier-scss": "0.0.1",
     "stylelint-config-standard-scss": "3.0.0",
     "ts-loader": "9.2.8",
+    "ts-node": "10.7.0",
     "typescript": "4.6.3",
     "webpack": "5.72.0",
     "webpack-cli": "4.9.2",
     "webpack-dev-server": "4.8.1",
+    "webpack-node-externals": "3.0.0",
     "workbox-webpack-plugin": "6.5.3"
   }
 }
