--- a/package.json
+++ b/package.json
@@ -128,6 +128,7 @@
     "ts-jest": "^28.0.2",
     "ts-loader": "9.2.8",
     "ts-node": "10.7.0",
+    "tsconfig-paths-webpack-plugin": "^3.5.2",
     "typescript": "4.6.3",
     "webpack": "5.72.0",
     "webpack-cli": "4.9.2",
