--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "@chakra-ui/react": "1.8.8",
     "@emotion/react": "11.9.0",
     "@emotion/styled": "11.8.1",
-    "@loadable/component": "5.15.2",
-    "@loadable/server": "5.15.2",
+    "@loadable/component": "^5.15.2",
+    "@loadable/server": "^5.15.2",
     "@testing-library/jest-dom": "5.16.4",
     "babel-polyfill": "6.26.0",
     "compression": "1.7.4",
@@ -71,17 +71,17 @@
     "@babel/runtime": "7.17.9",
     "@emotion/react": "11.9.0",
     "@emotion/styled": "11.8.1",
-    "@loadable/babel-plugin": "5.13.2",
-    "@loadable/webpack-plugin": "5.15.2",
+    "@loadable/babel-plugin": "^5.13.2",
+    "@loadable/webpack-plugin": "^5.15.2",
     "@testing-library/react": "12.1.5",
     "@types/compression": "1.7.2",
     "@types/cookie-parser": "^1.4.3",
     "@types/express": "4.17.13",
     "@types/history": "4.7.11",
     "@types/jest": "27.5.1",
-    "@types/loadable__component": "5.13.4",
-    "@types/loadable__server": "5.12.6",
-    "@types/loadable__webpack-plugin": "5.7.3",
+    "@types/loadable__component": "^5.13.4",
+    "@types/loadable__server": "^5.12.6",
+    "@types/loadable__webpack-plugin": "^5.7.3",
     "@types/lodash": "4.14.182",
     "@types/mini-css-extract-plugin": "2.5.1",
     "@types/postcss-import": "14.0.0",
