--- a/package.json
+++ b/package.json
@@ -62,12 +62,12 @@
     "webpack-cli": "4.9.2"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-class-properties": "7.16.7",
-    "@babel/plugin-syntax-dynamic-import": "7.8.3",
+    "@babel/plugin-proposal-class-properties": "^7.16.7",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-transform-runtime": "7.17.10",
     "@babel/preset-env": "7.17.10",
-    "@babel/preset-react": "7.16.7",
-    "@babel/preset-typescript": "7.16.7",
+    "@babel/preset-react": "^7.16.7",
+    "@babel/preset-typescript": "^7.16.7",
     "@babel/runtime": "7.17.9",
     "@emotion/react": "11.9.0",
     "@emotion/styled": "11.8.1",
@@ -126,7 +126,6 @@
     "stylelint-config-prettier-scss": "0.0.1",
     "stylelint-config-standard-scss": "3.0.0",
     "ts-jest": "^28.0.2",
-    "ts-loader": "9.2.8",
     "ts-node": "10.7.0",
     "tsconfig-paths-webpack-plugin": "^3.5.2",
     "typescript": "4.6.3",
