--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@loadable/component": "5.15.2",
     "@loadable/server": "5.15.2",
     "@testing-library/jest-dom": "5.16.4",
+    "axios": "^0.27.2",
     "babel-polyfill": "6.26.0",
     "compression": "1.7.4",
     "connected-react-router": "6.9.2",
@@ -45,6 +46,7 @@
     "framer-motion": "6.3.0",
     "history": "4.9.0",
     "lodash": "4.17.21",
+    "node-fetch": "^3.2.5",
     "rc-upload": "4.3.3",
     "react": "17.0.0",
     "react-dom": "17.0.0",
@@ -98,7 +100,7 @@
     "autoprefixer": "10.4.4",
     "babel-loader": "8.2.5",
     "compression-webpack-plugin": "10.0.0",
-    "cookie-parser": "1.4.6",
+    "cookie-parser": "^1.4.6",
     "css-hot-loader": "1.4.4",
     "css-loader": "6.7.1",
     "eslint": "8.13.0",
