--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@loadable/component": "5.15.2",
     "@loadable/server": "5.15.2",
     "@testing-library/jest-dom": "5.16.4",
-    "axios": "^0.27.2",
+    "axios": "0.27.2",
     "babel-polyfill": "6.26.0",
     "compression": "1.7.4",
     "connected-react-router": "6.9.2",
@@ -46,7 +46,6 @@
     "framer-motion": "6.3.0",
     "history": "4.9.0",
     "lodash": "4.17.21",
-    "node-fetch": "^3.2.5",
     "rc-upload": "4.3.3",
     "react": "17.0.0",
     "react-dom": "17.0.0",
@@ -89,7 +88,7 @@
     "@types/postcss-import": "14.0.0",
     "@types/react": "17.0.0",
     "@types/react-dom": "17.0.0",
-    "@types/react-hot-loader": "^4.1.1",
+    "@types/react-hot-loader": "4.1.1",
     "@types/react-router-dom": "5.3.1",
     "@types/redux": "3.6.0",
     "@types/webpack": "5.28.0",
@@ -100,7 +99,7 @@
     "autoprefixer": "10.4.4",
     "babel-loader": "8.2.5",
     "compression-webpack-plugin": "10.0.0",
-    "cookie-parser": "^1.4.6",
+    "cookie-parser": "1.4.6",
     "css-hot-loader": "1.4.4",
     "css-loader": "6.7.1",
     "eslint": "8.13.0",
@@ -118,19 +117,19 @@
     "postcss": "8.4.12",
     "postcss-loader": "6.2.1",
     "postcss-preset-env": "7.4.3",
-    "react-hot-loader": "^4.13.0",
+    "react-hot-loader": "4.13.0",
     "redux-devtools-extension": "^2.13.9",
     "rimraf": "3.0.2",
     "sass": "1.50.0",
     "sass-loader": "12.6.0",
-    "sass-resources-loader": "^2.2.5",
+    "sass-resources-loader": "2.2.5",
     "stylelint": "14.7.1",
     "stylelint-config-prettier-scss": "0.0.1",
     "stylelint-config-standard-scss": "3.0.0",
-    "ts-jest": "^28.0.2",
+    "ts-jest": "28.0.2",
     "ts-loader": "9.2.8",
     "ts-node": "10.7.0",
-    "tsconfig-paths-webpack-plugin": "^3.5.2",
+    "tsconfig-paths-webpack-plugin": "3.5.2",
     "typescript": "4.6.3",
     "webpack": "5.72.0",
     "webpack-cli": "4.9.2",
