--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "@chakra-ui/react": "1.8.8",
     "@emotion/react": "11.9.0",
     "@emotion/styled": "11.8.1",
-    "@loadable/component": "^5.15.2",
-    "@loadable/server": "^5.15.2",
+    "@loadable/component": "5.15.2",
+    "@loadable/server": "5.15.2",
     "@testing-library/jest-dom": "5.16.4",
     "axios": "0.27.2",
     "babel-polyfill": "6.26.0",
@@ -63,26 +63,26 @@
     "webpack-cli": "4.9.2"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.16.7",
-    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/plugin-transform-runtime": "^7.17.10",
+    "@babel/plugin-proposal-class-properties": "7.16.7",
+    "@babel/plugin-syntax-dynamic-import": "7.8.3",
+    "@babel/plugin-transform-runtime": "7.17.10",
     "@babel/preset-env": "7.17.10",
-    "@babel/preset-react": "^7.16.7",
-    "@babel/preset-typescript": "^7.16.7",
+    "@babel/preset-react": "7.16.7",
+    "@babel/preset-typescript": "7.16.7",
     "@babel/runtime": "7.17.9",
     "@emotion/react": "11.9.0",
     "@emotion/styled": "11.8.1",
-    "@loadable/babel-plugin": "^5.13.2",
-    "@loadable/webpack-plugin": "^5.15.2",
+    "@loadable/babel-plugin": "5.13.2",
+    "@loadable/webpack-plugin": "5.15.2",
     "@testing-library/react": "12.1.5",
     "@types/compression": "1.7.2",
-    "@types/cookie-parser": "^1.4.3",
+    "@types/cookie-parser": "1.4.3",
     "@types/express": "4.17.13",
     "@types/history": "4.7.11",
     "@types/jest": "27.5.1",
-    "@types/loadable__component": "^5.13.4",
-    "@types/loadable__server": "^5.12.6",
-    "@types/loadable__webpack-plugin": "^5.7.3",
+    "@types/loadable__component": "5.13.4",
+    "@types/loadable__server": "5.12.6",
+    "@types/loadable__webpack-plugin": "5.7.3",
     "@types/lodash": "4.14.182",
     "@types/mini-css-extract-plugin": "2.5.1",
     "@types/postcss-import": "14.0.0",
@@ -98,7 +98,6 @@
     "add-asset-html-webpack-plugin": "5.0.2",
     "autoprefixer": "10.4.4",
     "babel-loader": "8.2.5",
-    "babel-plugin-transform-runtime": "^6.23.0",
     "compression-webpack-plugin": "10.0.0",
     "cookie-parser": "1.4.6",
     "css-hot-loader": "1.4.4",
@@ -119,7 +118,7 @@
     "postcss-loader": "6.2.1",
     "postcss-preset-env": "7.4.3",
     "react-hot-loader": "4.13.0",
-    "redux-devtools-extension": "^2.13.9",
+    "redux-devtools-extension": "2.13.9",
     "rimraf": "3.0.2",
     "sass": "1.50.0",
     "sass-loader": "12.6.0",
