--- a/package.json
+++ b/package.json
@@ -41,11 +41,13 @@
     "connected-react-router": "6.9.2",
     "css-loader": "6.7.1",
     "date-fns": "2.28.0",
+    "dotenv": "^16.0.1",
     "express": "4.18.1",
     "formik": "2.2.9",
     "framer-motion": "6.3.0",
     "history": "4.9.0",
     "lodash": "4.17.21",
+    "mongodb": "^4.7.0",
     "rc-upload": "4.3.3",
     "react": "17.0.0",
     "react-dom": "17.0.0",
