--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,39 +2,84 @@ version: "3"
 
 services:
 
-  mongo:
+  yandex-mongo:
+    container_name: yandex-mongo
     image: mongo
-    container_name: mongo
 
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: user
-      MONGO_INITDB_ROOT_PASSWORD: password
+    ports:
+      - "27017:27017"
+
+    volumes:
+      - ./services/mongo:/data/db
+
+    env_file:
+      - ./.env
 
     networks:
-      - common-network
+      - common
+
+  yandex-postgres:
+    container_name: yandex-postgres
+    image: postgres:12
+
+    ports:
+      - "5432:5432"
+
+    volumes:
+      - ./services/postgres:/var/lib/postgresql/data
+
+    env_file:
+      - ./.env
+
+    networks:
+      - common
+
+  yandex-pgadmin:
+    container_name: yandex-pgadmin
+    image: dpage/pgadmin4:4.18
+
+    ports:
+      - "8080:80"
+
+    volumes:
+      - ./services/pgadmin:/var/lib/pgadmin
+
+    env_file:
+      - ./.env
+
+    environment:
+      - PGADMIN_LISTEN_PORT=80
+
+    depends_on:
+      - yandex-postgres
+
+    networks:
+      - common
 
   game:
     build:
       context: .
-    image: game
-
-    environment:
-      MONGO_HOST: mongo
-
-    env_file: ./.env
 
     container_name: game
+    image: game
+
+    env_file:
+      - ./.env
+
+    environment:
+      - MONGO_HOST=yandex-mongo
 
     ports:
       - "5000:5000"
 
     depends_on:
-      - mongo
+      - yandex-mongo
+      - yandex-postgres
 
     networks:
-      - common-network
+      - common
 
 
 networks:
-  common-network:
+  common:
     driver: bridge
