--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "history": "4.9.0",
     "lodash": "4.17.21",
     "mongodb": "^4.7.0",
+    "pg": "^8.7.3",
     "rc-upload": "4.3.3",
     "react": "17.0.0",
     "react-dom": "17.0.0",
@@ -87,6 +88,7 @@
     "@types/loadable__webpack-plugin": "5.7.3",
     "@types/lodash": "4.14.182",
     "@types/mini-css-extract-plugin": "2.5.1",
+    "@types/pg": "^8.6.5",
     "@types/postcss-import": "14.0.0",
     "@types/react": "17.0.0",
     "@types/react-dom": "17.0.0",
