--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "three-dots-game",
   "version": "1.0.0",
   "description": "проект игры для второго модуля",
-  "main": "index.js",
+  "main": "index.ts",
   "engines": {
     "node": "16.14.0"
   },
   "scripts": {
     "start:webpack": "webpack --watch  --mode development",
-    "start:server": "nodemon index.js --watch dist/server.js",
+    "start:server": "nodemon index.ts --watch dist/server.js",
     "start": "SET NODE_ENV=development & npm-run-all --print-label --parallel start:*",
     "build": "npm run build:dev:vendors && webpack --mode production",
     "build:dev:vendors": "SET NODE_ENV=development & webpack --mode=development --config webpack/config/vendors.config.ts",
@@ -58,9 +58,12 @@
     "react-toastify": "8.2.0",
     "redux": "4.1.2",
     "redux-saga": "1.1.3",
+    "reflect-metadata": "^0.1.13",
     "reselect": "4.1.5",
     "sass": "1.50.0",
     "sass-loader": "12.6.0",
+    "sequelize": "^6.20.1",
+    "sequelize-typescript": "^2.1.3",
     "style-loader": "3.3.1",
     "webpack": "5.72.0",
     "webpack-cli": "4.9.2"
