--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start:webpack": "webpack --watch --mode=development",
     "start:server": "nodemon index.ts --watch",
     "start": "SET NODE_ENV=development & npm-run-all --print-label --parallel start:*",
-    "build": "npm run build:dev:vendors && webpack --mode=production",
+    "build": "npm run clean && npm run build:dev:vendors && webpack --mode=production",
     "build:dev:vendors": "SET NODE_ENV=production & webpack --mode=production --config webpack/config/vendors.config.ts",
     "clean": "rimraf dist/*",
     "stylelint": "npx stylelint \"**/*.scss\" --fix",
