--- a/.babelrc
+++ b/.babelrc
@@ -1,12 +1,13 @@
 {
   "presets": [
-    "@babel/preset-env",    
+    "@babel/preset-env",
     "@babel/preset-typescript",
     "@babel/preset-react"
   ],
   "plugins": [
     "react-hot-loader/babel",
-    "@babel/plugin-proposal-class-properties",
+    ["@babel/plugin-proposal-decorators", { "legacy": true }],
+    ["@babel/plugin-proposal-class-properties", { "loose": true }],
     "@babel/plugin-syntax-dynamic-import",
     "@loadable/babel-plugin",
     "@babel/plugin-transform-runtime"
