--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "start:webpack": "webpack --watch --mode=development",
     "start:server": "nodemon index.ts --watch",
     "start": "SET NODE_ENV=development & npm-run-all --print-label --parallel start:*",
+    "seed": "sequelize-cli db:seed:all --debug",
+    "migrate": "sequelize-cli db:migrate --debug",
+    "drop": "sequelize-cli db:drop --debug",
     "build": "npm run clean && npm run build:dev:vendors && webpack --mode=production",
     "build:dev:vendors": "SET NODE_ENV=production & webpack --mode=production --config webpack/config/vendors.config.ts",
     "clean": "rimraf dist/*",
@@ -63,6 +66,7 @@
     "sass": "1.50.0",
     "sass-loader": "12.6.0",
     "sequelize": "^6.20.1",
+    "sequelize-cli": "^6.4.1",
     "sequelize-typescript": "^2.1.3",
     "style-loader": "3.3.1",
     "webpack": "5.72.0",
