--- a/package.json
+++ b/package.json
@@ -104,13 +104,14 @@
     "@types/react-router-dom": "5.3.1",
     "@types/redux": "3.6.0",
     "@types/webpack": "5.28.0",
+    "@types/webpack-bundle-analyzer": "^4.4.1",
     "@types/webpack-node-externals": "2.5.3",
     "@typescript-eslint/eslint-plugin": "5.20.0",
     "@typescript-eslint/parser": "5.20.0",
     "add-asset-html-webpack-plugin": "5.0.2",
     "autoprefixer": "10.4.4",
     "babel-loader": "8.2.5",
-    "compression-webpack-plugin": "10.0.0",
+    "compression-webpack-plugin": "^10.0.0",
     "cookie-parser": "1.4.6",
     "css-hot-loader": "1.4.4",
     "css-loader": "6.7.1",
@@ -143,6 +144,7 @@
     "tsconfig-paths-webpack-plugin": "3.5.2",
     "typescript": "4.6.3",
     "webpack": "5.72.0",
+    "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "4.9.2",
     "webpack-dev-server": "4.8.1",
     "webpack-node-externals": "3.0.0",
