--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,9 +6,9 @@ name: CI
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: [ "main", "sprint_9" ]
+    branches: [ "main", "sprint_9","git-hub-actions" ]
   pull_request:
-    branches: [ "main", "sprint_9" ]
+    branches: [ "main", "sprint_9","git-hub-actions" ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
