--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: CI/CD
 
 # Controls when the workflow will run
 on:
@@ -16,6 +16,13 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
+  dev:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Set up GitHub Actions
+        uses: actions/checkout@v2
+      - name: test
+        run: npm run test
   build:
     # The type of runner that the job will run on
     runs-on: self-hosted
