--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,9 +18,18 @@ jobs:
   # This workflow contains a single job called "build"
   dev:
     runs-on: ubuntu-latest
+    strategy:
+      matrix: 
+        node-version: [16.x]
     steps:
       - name: Set up GitHub Actions
         uses: actions/checkout@v2
+      - name: Set up node ${{matrix.node-version}}
+        uses: actions/setup-node-@v2
+        with:
+          node-version: ${{matrix.node-version}}
+      - name: instal deps
+        run: npm ci
       - name: test
         run: npm run test
   build:
