--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,8 +30,12 @@ jobs:
           node-version: ${{matrix.node-version}}
       - name: instal deps
         run: npm ci --legacy-peer-deps
+      - name: lint
+        run: npm run lint
       - name: test
         run: npm run test
+        
+        
   build:
     # The type of runner that the job will run on
     runs-on: self-hosted
