--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "express": "4.18.1",
     "formik": "2.2.9",
     "framer-motion": "6.3.0",
+    "helmet": "5.1.0",
     "history": "4.9.0",
     "lodash": "4.17.21",
     "mongodb": "^4.7.0",
