--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,25 +1,18 @@
-# This is a basic workflow to help you get started with Actions
-
 name: CI/CD
 
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: [ "main", "sprint_9","git-hub-actions" ]
+    branches: ["main", "sprint_9", "git-hub-actions"]
   pull_request:
-    branches: [ "main", "sprint_9","git-hub-actions" ]
+    branches: ["main", "sprint_9", "git-hub-actions"]
 
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   dev:
     runs-on: ubuntu-latest
     strategy:
-      matrix: 
+      matrix:
         node-version: [16.x]
     steps:
       - name: Set up GitHub Actions
@@ -34,23 +27,21 @@ jobs:
         run: npm run lint
       - name: test
         run: npm run test
-        
-        
+
   build:
-    # The type of runner that the job will run on
     runs-on: self-hosted
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+      - name: test comand
+        run: 
+      - name: Deploy to server
+        uses: easingthemes/ssh-deploy@v2.1.5
+        env: echo "this is a line" >> file.txt
+          SSH_PRIVATE_KEY: ${{secrets/SERVER_SSH_KEY}}
+          ARGS: "-rltgoDzv0 --delete"
+          SOURCE: "dist/"
+          REMOTE_HOST: ${{secrets.REMOTE_HOST}}
+          REMOTE_USER: ${{secrets.REMOTE_USER}}
+          TARGET: ${{secrets.REMOTE_TARGET}}
+          EXCLUDE: "/dist/, /node/modules"
