--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,10 +34,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: test comand
-        run: 
+        run: echo "this is a line" >> file.txt
       - name: Deploy to server
         uses: easingthemes/ssh-deploy@v2.1.5
-        env: echo "this is a line" >> file.txt
+        env: 
           SSH_PRIVATE_KEY: ${{secrets.SERVER_SSH_KEY}}
           ARGS: "-rltgoDzv0 --delete"
           SOURCE: "dist/"
