--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,35 +9,29 @@ on:
   workflow_dispatch:
 
 jobs:
-  dev:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [16.x]
-    steps:
-      - name: Set up GitHub Actions
-        uses: actions/checkout@v2
-      - name: Set up node ${{matrix.node-version}}
-        uses: actions/setup-node-@v2
-        with:
-          node-version: ${{matrix.node-version}}
-      - name: instal deps
-        run: npm ci --legacy-peer-deps
-      - name: lint
-        run: npm run lint
-      - name: test
-        run: npm run test
-
   build:
     runs-on: self-hosted
+    strategy:
+      matrix:
+        node-version: [ 16.x ]
 
     steps:
       - uses: actions/checkout@v3
-      - name: test comand
-        run: echo "this is a line" >> file.txt
-      - name: Deploy to server
+
+      - name: Set up node ${{matrix.node-version}}
+      - uses: actions/setup-node-@v3
+        with:
+          node-version: ${{matrix.node-version}}
+
+      - name: install deps
+        run: npm ci --legacy-peer-deps
+
+      - name: build to dist folder
+        run: npm run build
+
+      - name: deploy to server
         uses: easingthemes/ssh-deploy@v2.1.5
-        env: 
+        env:
           SSH_PRIVATE_KEY: ${{secrets.SERVER_SSH_KEY}}
           ARGS: "-rltgoDzv0 --delete"
           SOURCE: "dist/"
