--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,15 +33,23 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+      - name: Install Node.js
+        uses: actions/setup-node@v1
+        with:
+          node-version: "10.x"
+      - name: Install npm dependencies
+        run: npm install
+      - name: Run build task
+        run: npm run build
       - name: test comand
         run: echo "this is a line" >> file.txt
       - name: Deploy to server
         uses: easingthemes/ssh-deploy@v2.1.5
-        env: 
-          SSH_PRIVATE_KEY: ${{secrets.SERVER_SSH_KEY}}
-          ARGS: "-rltgoDzv0 --delete"
+        env:
+          SSH_PRIVATE_KEY: ${{ secrets.SERVER_SSH_KEY }}
+          ARGS: "-rltgoDzvO --delete"
           SOURCE: "dist/"
-          REMOTE_HOST: ${{secrets.REMOTE_HOST}}
-          REMOTE_USER: ${{secrets.REMOTE_USER}}
-          TARGET: ${{secrets.REMOTE_TARGET}}
-          EXCLUDE: "/dist/, /node/modules"
+          REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
+          REMOTE_USER: ${{ secrets.REMOTE_USER }}
+          TARGET: ${{ secrets.REMOTE_TARGET }}
+          EXCLUDE: "/dist/, /node_modules/"
