--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Set up GitHub Actions
         uses: actions/checkout@v2
       - name: Set up node ${{matrix.node-version}}
-        uses: actions/setup-node-@v2
+        uses: actions/setup-node@v2
         with:
           node-version: ${{matrix.node-version}}
       - name: instal deps
@@ -32,13 +32,13 @@ jobs:
     runs-on: self-hosted
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v2
       - name: Install Node.js
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v2
         with:
-          node-version: "10.x"
+          node-version: "16.x"
       - name: Install npm dependencies
-        run: npm install
+        run: npm ci --legacy-peer-deps
       - name: Run build task
         run: npm run build
       - name: test comand
