--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,12 +41,12 @@ jobs:
         run: npm ci --legacy-peer-deps
       - name: Run build task
         #run: npm run build
-        
+
         run: cp .env-example .env
       - name: Run build task
-        #run: npm run build
-        
-        run: docker-compose up -d
+        run: npm run build --if-present
+
+#        run: docker-compose up -d
       - name: test comand
         run: echo "this is a line" >> file.txt
       - name: Deploy to server
