--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,48 +9,48 @@ on:
   workflow_dispatch:
 
 jobs:
-  dev:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [16.x]
-    steps:
-      - name: Set up GitHub Actions
-        uses: actions/checkout@v2
-      - name: Set up node ${{matrix.node-version}}
-        uses: actions/setup-node@v2
-        with:
-          node-version: ${{matrix.node-version}}
-      - name: instal deps
-        run: npm ci --legacy-peer-deps
-      - name: lint
-        run: npm run lint
-      - name: test
-        run: npm run test
+#  dev:
+#    runs-on: ubuntu-latest
+#    strategy:
+#      matrix:
+#        node-version: [16.14.2]
+#    steps:
+#      - name: Set up GitHub Actions
+#        uses: actions/checkout@v2
+#      - name: Set up node ${{matrix.node-version}}
+#        uses: actions/setup-node@v2
+#        with:
+#          node-version: ${{matrix.node-version}}
+#      - name: instal deps
+#        run: npm ci --legacy-peer-deps
+#      - name: lint
+#        run: npm run lint
+#      - name: test
+#        run: npm run test
 
   build:
     runs-on: self-hosted
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Install Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
-          node-version: "16.x"
+          node-version: "16.14.2"
       - name: Install npm dependencies
         run: npm ci --legacy-peer-deps
-      - name: Run build task
-        #run: npm run build
 
+      - name: cp env file
         run: cp .env-example .env
+
       - name: Run build task
         run: npm run build --if-present
 
 #        run: docker-compose up -d
-      - name: test comand
-        run: echo "this is a line" >> file.txt
+#      - name: test comand
+#        run: echo "this is a line" >> file.txt
       - name: Deploy to server
-        uses: easingthemes/ssh-deploy@v2.1.5
+        uses: easingthemes/ssh-deploy@main
         env:
           SSH_PRIVATE_KEY: ${{ secrets.SERVER_SSH_KEY }}
           ARGS: "-rltgoDzvO --delete"
