--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,12 +43,14 @@ jobs:
       - name: cp env file
         run: cp .env-example .env
 
-      - name: Run build task
-        run: npm run build --if-present
+      - name: test comand
+        run: echo "this is a line" >> dist/file.txt
+#
+#      - name: Run build task
+#        run: npm run build --if-present
 
 #        run: docker-compose up -d
-#      - name: test comand
-#        run: echo "this is a line" >> file.txt
+
       - name: Deploy to server
         uses: easingthemes/ssh-deploy@main
         env:
