--- a/.env-example
+++ b/.env-example
@@ -10,14 +10,14 @@
 
 
 # настройки mongo
-MONGO_HOST=yandex-mongo
+MONGO_HOST=localhost
 MONGO_PORT=27017
 MONGO_INITDB_ROOT_USERNAME=user
 MONGO_INITDB_ROOT_PASSWORD=password
 MONGO_DB_NAME=game
   
   # настройки postgres
-POSTGRESQL_HOST=yandex-postgres
+POSTGRESQL_HOST=localhost
 POSTGRESQL_PORT=5432
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
