тас запуска скриптов

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,9 +58,6 @@ jobs:
           file_name: .env
           fail_on_empty: false
 
-#      - name: Run build task
-#        run: npm run build
-
       - name: Deploy to server
         uses: easingthemes/ssh-deploy@main
         env:
@@ -72,3 +69,12 @@ jobs:
           TARGET: ${{ secrets.REMOTE_TARGET }}
           EXCLUDE: "/dist/, /node_modules/"
 
+      - name: executing remote ssh commands using ssh key
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.REMOTE_HOST }}
+          username: ${{ secrets.REMOTE_USER }}
+          key: ${{ secrets.SERVER_SSH_KEY }}
+          script: |
+            whoami
+            ls -al
