--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -75,7 +75,4 @@ jobs:
           host: ${{ secrets.REMOTE_HOST }}
           username: ${{ secrets.REMOTE_USER }}
           key: ${{ secrets.SERVER_SSH_KEY }}
-          script: |
-            cd /home/deploy/three-dots-game
-            docker-compose ps
-            docker-compose up yandex-postgres yandex-mongo yandex-pgadmin
+          script: bash ../../up.sh
