изменила env-example

--- a/.env-example
+++ b/.env-example
@@ -27,4 +27,4 @@ POSTGRES_DB=game
 PGADMIN_DEFAULT_EMAIL=postgres@postgres.com
 PGADMIN_DEFAULT_PASSWORD=postgres
 
-HOST='localhost:5000'
+HOST=localhost:5000
